; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_tcache.c_tcache_bin_stack_alignment.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_tcache.c_tcache_bin_stack_alignment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LG_SIZEOF_PTR = common dso_local global i32 0, align 4
@PAGE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @tcache_bin_stack_alignment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @tcache_bin_stack_alignment(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @LG_SIZEOF_PTR, align 4
  %5 = icmp slt i32 %4, 3
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @PAGE, align 8
  %9 = icmp ult i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %6, %1
  %11 = load i64, i64* @PAGE, align 8
  store i64 %11, i64* %2, align 8
  br label %15

12:                                               ; preds = %6
  %13 = load i64, i64* %3, align 8
  %14 = call i64 @pow2_ceil_zu(i64 %13)
  store i64 %14, i64* %2, align 8
  br label %15

15:                                               ; preds = %12, %10
  %16 = load i64, i64* %2, align 8
  ret i64 %16
}

declare dso_local i64 @pow2_ceil_zu(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
